removing large caches, experimenting with different format/quality

--- a/shopping_docker_rebuild/Dockerfile
+++ b/shopping_docker_rebuild/Dockerfile
@@ -1,15 +1,19 @@
-FROM bgrins/vwa-shopping-optimized-base:latest AS base
+FROM bgrins/vwa-shopping-optimized-base:latest AS extractor
+# Extract data from the bloated image without including the runtime layers
+COPY --from=shopping_final_0712 /var/www/magento2 /var/www/magento2
+COPY --from=shopping_final_0712 /var/lib/mysql /var/lib/mysql
 
-ARG MAGENTO_VERSION=2.4.6
-ARG SAMPLE_DATA=true
+FROM bgrins/vwa-shopping-optimized-base:latest AS base
 
 RUN mkdir -p /var/www/magento2 && \
     chown -R www-data:www-data /var/www/magento2
 
 WORKDIR /var/www/magento2
 
-COPY --from=shopping_final_0712 /var/www/magento2 /var/www/magento2
-COPY --from=shopping_final_0712 /var/lib/mysql /var/lib/mysql.template
+# Copy only the application files, not runtime data
+COPY --from=extractor /var/www/magento2 /var/www/magento2
+# Store MySQL data as template to be restored on first run
+COPY --from=extractor /var/lib/mysql /var/lib/mysql.template
 
 COPY nginx-default.conf /etc/nginx/conf.d/default.conf
 COPY entrypoint-optimized.sh /docker-entrypoint-optimized.sh
