--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ shopping_extracted/magento2/dev
 shopping_extracted/mysql_data
 backup_cache
 
+shopping_docker_rebuild/mysql-baked/magento_dump.sql
+
 shopping_extracted_avif
 shopping_extracted_backup
 shopping_extracted_jpg*
