--- a/shopping_base_image/supervisor.d/php-fpm.ini
+++ b/shopping_base_image/supervisor.d/php-fpm.ini
@@ -10,3 +10,4 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+environment=LD_PRELOAD="/usr/lib/preloadable_libiconv.so"
