--- a/shopping_base_image/supervisor.d/elasticsearch.ini
+++ b/shopping_base_image/supervisor.d/elasticsearch.ini
@@ -1,5 +1,6 @@
 [program:elasticsearch]
-command=su elastico -c "ES_JAVA_HOME=/usr elasticsearch"
+command=su elastico -c "export ES_JAVA_HOME=/usr && elasticsearch"
+environment=ES_JAVA_HOME="/usr"
 autostart=true
 autorestart=true
 priority=8
