--- a/shopping_base_image/supervisor.d/php-fpm.ini
+++ b/shopping_base_image/supervisor.d/php-fpm.ini
@@ -1,6 +1,6 @@
 # for supervisord
 [program:php-fpm]
-command=/usr/sbin/php-fpm81 --nodaemonize
+command=/usr/sbin/php-fpm8.2 --nodaemonize
 autostart=true
 autorestart=true
 priority=2
