--- a/shopping_base_image/supervisord.conf
+++ b/shopping_base_image/supervisord.conf
@@ -167,4 +167,4 @@ serverurl=unix:///run/supervisord.sock ; use a unix:// URL for a unix socket
 ; include files themselves.
 
 [include]
-files = /etc/supervisor.d/*.ini
+files = /etc/supervisor/conf.d/*.ini
